pkg/front_end/testcases/nnbd/never_receiver.dart.strong.expect
library /*isNonNullableByDefault*/;
//
// Problems in library:
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:24:5: Error: The method 'foo' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing method, or defining a method named 'foo'.
//   y.foo(); // Error.
//     ^^^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:25:5: Error: The getter 'bar' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing getter, or defining a getter or field named 'bar'.
//   y.bar; // Error.
//     ^^^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:25:5: Error: Property 'bar' cannot be accessed on 'Never' because it is potentially null.
// Try accessing using ?. instead.
//   y.bar; // Error.
//     ^^^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:26:5: Error: The setter 'baz' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing setter, or defining a setter or field named 'baz'.
//   y.baz = 42; // Error.
//     ^^^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:26:5: Error: Property 'baz' cannot be accessed on 'Never' because it is potentially null.
// Try accessing using ?. instead.
//   y.baz = 42; // Error.
//     ^^^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:27:4: Error: The method 'call' isn't defined for the class 'Never'.
// Try correcting the name to the name of an existing method, or defining a method named 'call'.
//   y(); // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:27:4: Error: Can't use an expression of type 'Never' as a function because it's potentially null.
// Try calling using ?.call instead.
//   y(); // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:28:4: Error: The operator '+' isn't defined for the class 'Never'.
// Try correcting the operator to an existing operator, or defining a '+' operator.
//   y++; // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:28:4: Error: Operator '+' cannot be called on 'Never' because it is potentially null.
//   y++; // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:29:5: Error: The operator '+' isn't defined for the class 'Never'.
// Try correcting the operator to an existing operator, or defining a '+' operator.
//   y += 1; // Error.
//     ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:29:5: Error: Operator '+' cannot be called on 'Never' because it is potentially null.
//   y += 1; // Error.
//     ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:30:4: Error: The operator '[]' isn't defined for the class 'Never'.
// Try correcting the operator to an existing operator, or defining a '[]' operator.
//   y[42]; // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:30:4: Error: Operator '[]' cannot be called on 'Never' because it is potentially null.
//   y[42]; // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:31:4: Error: The operator '[]=' isn't defined for the class 'Never'.
// Try correcting the operator to an existing operator, or defining a '[]=' operator.
//   y[42] = 42; // Error.
//    ^
//
// pkg/front_end/testcases/nnbd/never_receiver.dart:31:4: Error: Operator '[]=' cannot be called on 'Never' because it is potentially null.
//   y[42] = 42; // Error.
//    ^
//
import self as self;
import "dart:core" as core;

static method foo(Never x, Never? y) → dynamic {
  core::String local0 = y.{core::Object::toString}();
  core::int local1 = y.{core::Object::hashCode};
  x.foo();
  x.bar;
  x.baz = 42;
  x.call();
  x.[](42);
  x.[]=(42, 42);
  x = x.+(1);
  x = x.+(1);
  let final Never? #t1 = y in #t1.{core::Object::==}(null) ?{dynamic} null : #t1{Never}.foo();
  let final Never? #t2 = y in #t2.{core::Object::==}(null) ?{core::Null?} null : #t2{Never}.bar;
  let final Never? #t3 = y in #t3.{core::Object::==}(null) ?{core::int?} null : #t3{Never}.baz = 42;
  let final Never? #t4 = y in #t4.{core::Object::==}(null) ?{dynamic} null : #t4{Never}.call();
  let final Never? #t5 = y in #t5.{core::Object::==}(null) ?{core::Null?} null : #t5{Never}.[](42);
  let final Never? #t6 = y in #t6.{core::Object::==}(null) ?{core::int?} null : #t6{Never}.[]=(42, 42);
  invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:24:5: Error: The method 'foo' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing method, or defining a method named 'foo'.
  y.foo(); // Error.
    ^^^";
  let final<BottomType> #t7 = invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:25:5: Error: Property 'bar' cannot be accessed on 'Never' because it is potentially null.
Try accessing using ?. instead.
  y.bar; // Error.
    ^^^" in invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:25:5: Error: The getter 'bar' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing getter, or defining a getter or field named 'bar'.
  y.bar; // Error.
    ^^^";
  let final<BottomType> #t8 = invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:26:5: Error: Property 'baz' cannot be accessed on 'Never' because it is potentially null.
Try accessing using ?. instead.
  y.baz = 42; // Error.
    ^^^" in invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:26:5: Error: The setter 'baz' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing setter, or defining a setter or field named 'baz'.
  y.baz = 42; // Error.
    ^^^";
  let final<BottomType> #t9 = invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:27:4: Error: Can't use an expression of type 'Never' as a function because it's potentially null.
Try calling using ?.call instead.
  y(); // Error.
   ^" in invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:27:4: Error: The method 'call' isn't defined for the class 'Never'.
Try correcting the name to the name of an existing method, or defining a method named 'call'.
  y(); // Error.
   ^";
  y = (let final<BottomType> #t10 = invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:28:4: Error: Operator '+' cannot be called on 'Never' because it is potentially null.
  y++; // Error.
   ^" in invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:28:4: Error: The operator '+' isn't defined for the class 'Never'.
Try correcting the operator to an existing operator, or defining a '+' operator.
  y++; // Error.
   ^") as{TypeError,ForDynamic,ForNonNullableByDefault} Never?;
  y = (let final<BottomType> #t11 = invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:29:5: Error: Operator '+' cannot be called on 'Never' because it is potentially null.
  y += 1; // Error.
    ^" in invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:29:5: Error: The operator '+' isn't defined for the class 'Never'.
Try correcting the operator to an existing operator, or defining a '+' operator.
  y += 1; // Error.
    ^") as{TypeError,ForDynamic,ForNonNullableByDefault} Never?;
  let final<BottomType> #t12 = invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:30:4: Error: Operator '[]' cannot be called on 'Never' because it is potentially null.
  y[42]; // Error.
   ^" in invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:30:4: Error: The operator '[]' isn't defined for the class 'Never'.
Try correcting the operator to an existing operator, or defining a '[]' operator.
  y[42]; // Error.
   ^";
  let final<BottomType> #t13 = invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:31:4: Error: Operator '[]=' cannot be called on 'Never' because it is potentially null.
  y[42] = 42; // Error.
   ^" in invalid-expression "pkg/front_end/testcases/nnbd/never_receiver.dart:31:4: Error: The operator '[]=' isn't defined for the class 'Never'.
Try correcting the operator to an existing operator, or defining a '[]=' operator.
  y[42] = 42; // Error.
   ^";
}
static method main() → dynamic {}
